--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,11 @@
     <title>Интернет-магазин</title>
   </head>
   <body>
+    <header></header>
+    <main>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
     </div>
+    </main>
   </body>
 </html>
